--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app",
   "version": "0.1.0",
-  "homepage": "https://jfersonrei.github.io/codeChallenge/",
+  "homepage": "https://jfersonrei.github.io/cc-river/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
